2002-10-22  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/python/log.py: Two new features.
	1) a stupid `debug' method that simply prefixes a message with "debug"
	and indents it so it's easier to distinguish from normal messages.
	This can eventually log to some magic "debug channel", once we have
	that implemented.

	2) implemented a custom warning handler; now warnings look sexy.
	(the hackish overriding of warnings.showwarning is the recommended way
	to do so, according to the library reference.)

2002-10-22  Moshe Zadka <moshez@twistedmatrix.com>

	* setup.py: conditionalize cReactor on threads support too. This
	is somewhat of a hack as it it done currently, but it's only necessary
	on weird OSes like NetBSD. I assume any UNIX with thread support has
	pthreads.

	* twisted/internet/tksupport.py: tunable reactor iterate delay
        parameter [by Jp Calderone]

2002-10-17  Moshe Zadka <moshez@twistedmatrix.com>

	* bin/websetroot twisted/scripts/websetroot.py: Added a program to set
	the root of a web server after the tap exists

2002-10-14  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/vhost.py: add a virtual host monster to support twisted
	sites behind a reverse proxy

	* twisted/tap/web.py twisted/web/script.py
        doc/man/mktap.1: adding an option to have a resource script as the root

2002-10-13  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/internet/utils.py twisted/internet/process.py
        twisted/internet/interfaces.py twisted/internet/default.py: Moved 
	utility functions into twisted.internet.utils

2002-10-12  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/internet/process.py twisted/internet/interfaces.py 
	twisted/internet/default.py: Add utility method to get output of
	programs.

2002-10-11  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/internet/wxsupport.py: improved responsiveness of wxPython
	GUI (50 FPS instead of 10 FPS).

2002-10-08  Brian Warner  <warner@twistedmatrix.com>
